--- a/isolation_forest.ipynb
+++ b/isolation_forest.ipynb
@@ -5,14 +5,24 @@
    "id": "b1bc5cd4-ae68-4b0b-aa04-ca2de1d4e8a8",
    "metadata": {},
    "source": [
+    "## Task Description\n",
+    "\n",
     "The data is stored in the matrix X with each observation corresponding to one row and each feature corresponding to a column. Using an isolation forest, label 10% of the observations as outliers. Put these labels into a Python list (or NumPy array). (This list (or array) must have as many entries as there are observations.) Ensure that each item in the list (or array) equals the string `\"outlier\"` if the corresponding observation is considered an outlier by the isolation forest. All the other items in the list (or array) should equal the string `\"inlier\"`.\n",
     "\n",
     "Ensure that your results are reproducible!"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "318f2bf3-758c-4497-b976-2ef9d31b8997",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d10fed17-2504-466f-89d1-9f2f6a71b502",
    "metadata": {},
    "outputs": [],
