--- a/pca_projection.ipynb
+++ b/pca_projection.ipynb
@@ -5,11 +5,25 @@
    "id": "b1bc5cd4-ae68-4b0b-aa04-ca2de1d4e8a8",
    "metadata": {},
    "source": [
-    "<p>Our data is centered (i.e., mean 0) and stored in a matrix. In this matrix, each observation corresponds to a column and each feature corresponds to a row. Using singular value decomposition, we obtain the matrices \\( U \\), \\( \\Sigma \\), and \\( V^T \\), the product of which equals the matrix with our data. These are the values of the three matrices:</p>\n",
-    "<p>\\( U = \\left( \\begin{matrix} 1 & 0 & 0 & 0 \\\\ 0 & \\sqrt{0.5} & -\\sqrt{0.5} & 0 \\\\ 0 & \\sqrt{0.5} & \\sqrt{0.5} & 0 \\\\ 0 & 0 & 0 & 1 \\end{matrix} \\right) \\)</p>\n",
-    "<p>\\( \\Sigma = \\left( \\begin{matrix} 8 & 0 &  & 0 \\\\ 0 & 6 & 0 & 0 \\\\ 0 & 0 & 4 & 0 \\\\ 0 & 0 & 0 & 2 \\end{matrix} \\right) \\)</p>\n",
-    "<p>\\( V^T =  \\left( \\begin{matrix} \\sqrt{0.5} & 0 & -\\sqrt{0.5} & 0 \\\\ 0 & 1 & 0 & 0 \\\\ \\sqrt{0.5} & 0 & \\sqrt{0.5} & 0 \\\\ 0 & 0 & 0 & 1 \\end{matrix} \\right)\\)</p>\n",
-    "<p>Project the observation \\( \\left( \\begin{matrix} 9 & 2 & 3 & 4 \\end{matrix} \\right)^T \\) onto the first two principal components! What are</p>"
+    "## Task Description\n",
+    "\n",
+    "Our data is centered (i.e., mean 0) and stored in a matrix. In this matrix, each observation corresponds to a column and each feature corresponds to a row. Using singular value decomposition, we obtain the matrices $U$, $\\Sigma$, and $V^T$, the product of which equals the matrix which contains our data. These are the values of the three matrices:\n",
+    "\n",
+    "$$ U = \\left( \\begin{matrix} 1 & 0 & 0 & 0 \\\\ 0 & \\sqrt{0.5} & -\\sqrt{0.5} & 0 \\\\ 0 & \\sqrt{0.5} & \\sqrt{0.5} & 0 \\\\ 0 & 0 & 0 & 1 \\end{matrix} \\right) $$\n",
+    "\n",
+    "$$ \\Sigma = \\left( \\begin{matrix} 8 & 0 &  & 0 \\\\ 0 & 6 & 0 & 0 \\\\ 0 & 0 & 4 & 0 \\\\ 0 & 0 & 0 & 2 \\end{matrix} \\right) $$\n",
+    "\n",
+    "$$ V^T =  \\left( \\begin{matrix} \\sqrt{0.5} & 0 & -\\sqrt{0.5} & 0 \\\\ 0 & 1 & 0 & 0 \\\\ \\sqrt{0.5} & 0 & \\sqrt{0.5} & 0 \\\\ 0 & 0 & 0 & 1 \\end{matrix} \\right) $$\n",
+    "\n",
+    "Project the observation $\\left( \\begin{matrix} 9 & 1 & 2 & 3 \\end{matrix} \\right)^T$ onto the first two principal components! Your answer should be the projection which is in the same space as the original observation (and not in a subspace)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e350d82-ab43-44f0-841b-c04116d199da",
+   "metadata": {},
+   "source": [
+    "## Code"
    ]
   },
   {
